@@ -1,4 +1,7 @@
 HEAD
+	+ Adapted to new location of partitionsFileSystems in EBox::FileSystem
+	+ Event messages are cleaned of null characters and truncated
+	  before inserting in the database when is necessary
 	+ Improve message for "Free storage space" event and send an info
 	  message when a given partition is not full anymore
 	+ Event messages now can contain newline characters
